hphp/test/zend/good/tests/classes/interface_constant_inheritance_002.php.expectf

Fatal error: Cannot override previously defined constant I::FOO in C in %s/interface_constant_inheritance_002.php on line 6
